--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-draggable-flatlist": "^3.1.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-maps": "0.30.2",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
