--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "expo-constants": "~13.1.1",
     "expo-device": "~4.2.0",
     "expo-location": "^14.2.2",
+    "expo-notifications": "~0.15.4",
     "expo-status-bar": "~1.3.0",
+    "iconv": "^3.0.1",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
