--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-notifications": "~0.15.4",
     "expo-status-bar": "~1.3.0",
     "iconv": "^3.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
